# ffmpeg_demo

./: .clang-tidy  CMakeLists.txt  README.md  main.cpp
aac_pcm/: CMakeLists.txt  main.cpp
decode_video/: CMakeLists.txt  main.cpp
encode_video/: CMakeLists.txt  main.cpp
filter_video/: CMakeLists.txt  main.cpp
h264_filter/: '  CMakeLists.txt  main.cpp  scoped_exit.hpp
h264_to_yuv/: CMakeLists.txt  log.h  main.cpp
rtp_filter/: CMakeLists.txt  main.cpp  ps.h  rtp.cpp  rtp.h
rtp_ps_h264/: CMakeLists.txt  main.cpp  ps.cpp  rtp.cpp
